// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sync jitteredRetry custom pk: should return all data 1`] = `
{
  "data": {
    "syncPosts": {
      "items": [
        {
          "postId": "1",
          "title": "Item 1",
        },
        {
          "postId": "2",
          "title": "Item 2",
        },
      ],
    },
  },
}
`;

exports[`Sync jitteredRetry should return all data 1`] = `
{
  "data": {
    "syncPosts": {
      "items": [
        {
          "id": "1",
          "title": "Item 1",
        },
        {
          "id": "2",
          "title": "Item 2",
        },
      ],
    },
  },
}
`;

exports[`Sync jitteredRetry should return partial data and send Hub event 1`] = `
{
  "data": {
    "syncPosts": {
      "items": [
        {
          "id": "1",
          "title": "Item 1",
        },
        {
          "id": "3",
          "title": "Item 3",
        },
      ],
    },
  },
  "errors": [
    {
      "message": "Item 2 error",
    },
  ],
}
`;

exports[`Sync jitteredRetry should throw error if no data is returned 1`] = `
{
  "data": null,
  "errors": [
    {
      "message": "General error",
    },
  ],
}
`;
